compiler/testData/diagnostics/tests/inference/emptyIntersectionTypes/kt45461_24.diag.txt
/kt45461_24.kt:12:35: error: type argument for a type parameter S can't be inferred because it has incompatible upper bounds: Inv<in Inv<in Number>>, K (incompatible type arguments: Number, Int)
    Bar<Inv<in Inv<in Number>>>().takeFoo(foo) // error in 1.3.72, no error in 1.4.31
                                  ^
